[build-system]
requires = ["flit_core >=3.5,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sphinxcontrib.kroki"
readme = "README.md"
requires-python = ">=3.8"
license = {file="LICENSE"}

dynamic = ["version", "description"]

authors = [
    {name = "Martin Hasoň", email = "martin.hason@gmail.com"}
]

classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
    "sphinx",
    "pyyaml",
    "requests>=2.4.2"
]

[project.urls]
Homepage = "https://github.com/sphinx-contrib/kroki"

[project.optional-dependencies]
code = ["black", "flake8", "mypy"]
test = [
    "coverage",
    "pytest",
    "pytest-cov",
    "responses",
]

[tool.pytest.ini_options]
markers = [
    "sphinx: run test in sphinx project",
]

[tool.black]
line-length = 79
target-version = ["py38"]

[tool.flit.module]
include = ["sphinxcontrib/kroki/placeholders/*"]
